# etalien_daily

./: .gitignore  README.md  build.py  etalien-daily.spec  pyproject.toml
.github/workflows/: release.yml
docs/: IMPLEMENTATION.md
gui/: __init__.py  api.py  app.py
gui/static/: app.js  index.html  style.css
src/etalien/: __init__.py  client.py  db.py  main.py  service.py  service_wrapper.py  sign.py
src/etalien/proto_compiled/: __init__.py  account.proto  account_pb2.py  apiv2.proto  apiv2_pb2.py  error.proto  error_pb2.py
tests/: test_db.py  test_proto.py  test_sign.py
