[project]
name = "etalien-daily"
version = "1.0.0"
description = "外星仔免广告领取加速时长"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "grpcio-tools>=1.81.1",
    "pywebview>=6.2.1",
    "requests>=2.31.0",
]

[project.scripts]
etalien = "etalien.main:main"
etalien-gui = "gui.app:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["etalien*", "gui*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
